xine-ui (0.99.6) unstable; urgency=low
  (write here, newest entry on top)

  * Fix build with libpng 1.4.
  * Fix build on Mac OS X.
  * Fix segfaults caused by our getline() (only used if no system getline()).
  * Add front-end support for .ass subtitles.
  * Point xine-bugreport at the current bugs list; note the bug tracker URL.
  * Disable character substitution code (xine bug 30). Let's see what breaks...
  * Set menu windows' override-redirect flag (xine bug 24)
  * Automatically load opensubtitle-like filenames <name>.*.<subext>
  * New/updated spanish manpage translations from Carlos E. Robinson
  * Fixed possible corruption and overflow of keybindings table
  * Mark the toolbar window as such; should fix control panel visibility issues
    in full-screen mode with some window managers. [bug SF 1750100]
  * New command/keybinding from Richard van Paasen:
    "PVRSetFrequency" changes frequency on ivtv cards (input_pvr).
  * Install a shared-mime-info entry for .tox files, contributed by
    Peter Fox in bug #10.
  * New commands/keybindings from Richard van Paasen:
    "PVRSetInput" changes input on ivtv cards (input_pvr);
    "PVRSetMark", "PVRSetName", "PVRSave" enable saving
    of live streams from ivtv cards (input_pvr).
  * New command/keybinding from Richard van Paasen:
    "SetPosition100%" jumps to end of stream.
  * Recognize .rmvb files, closes debian bug #437864.
  * Recognize .m2p files, closes debian bug #419002.
  * Fixes for stdctl race conditions, contributed by Stas Sergeev
  * Resetting the video controls restores the driver default settings
    instead of fixed center values
  * New commands/keybindings from Stas Sergeev:
    "SelectMrl" with a numeric parameter allows to select an MRL directly
    by its position number in the playlist.
    "KeyBindingsEnable" with optional numeric parameter allows to enable/disable
    the keybindings (disabled by param equal to 0, else enabled), so stdctl can